--- a/scrollspy.html
+++ b/scrollspy.html
@@ -5,10 +5,7 @@
  <meta charset="utf-8">
  <title>Adding Bootstrap 3 ScrollSpy via Data Attributes</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
- <!-- Optional Bootstrap theme -->
- <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css">
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
  <style type="text/css">
   body {
    position: relative;
