--- a/scrollspy.html
+++ b/scrollspy.html
@@ -16,7 +16,7 @@
  </style>
 
 </head>
-
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
 <div id="section3" class="container-fluid">
