--- a/index.html
+++ b/index.html
@@ -18,51 +18,38 @@
 </head>
   <body class="p-5 m-0 border-0 ">
 
-
-<div class="card" style="width:100%"> <img src="Lifebuoy.png" class="card-img-top" alt="Lifebuoy"> <div class="card-body"> <h4 class="card-title">Lifebuoy</h4>
-<p class="card-text">
-Lifebuoy is an antibacterial soap that offers protection from 10 infection causing germs.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="knorr.png" class="card-img-top" alt="knorr"> <div class="card-body"> <h4 class="card-title">Knorr</h4>
-<p class="card-text">
-Knorr is a cube that helps families to prepare the tastiest stew.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="signal.png" class="card-img-top" alt="signal"> <div class="card-body"> <h4 class="card-title">Signal</h4>
-<p class="card-text">
-
-<br>
-<br>
-Signal for a healthy smile.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="sunlight.png" class="card-img-top" alt="Sunlight"> <div class="card-body"> <h4 class="card-title">Sunlight</h4>
-<p class="card-text">
-Sunlight cleans and freshens. Leaves close smelling fresh.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="sunsilk.png" class="card-img-top" alt="Sunsilk"> <div class="card-body"> <h4 class="card-title">Sunsilk</h4>
-<p class="card-text">
-Made for ethiopian hair.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="omo.png" class="card-img-top" alt="Omo"> <div class="card-body"> <h4 class="card-title">OMO</h4>
-<p class="card-text">
-Dirt is good.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="lux.png" class="card-img-top" alt="Lux"> <div class="card-body"> <h4 class="card-title">Lux</h4>
-<p class="card-text">
-For a skin as soft and fragrant as a flower.
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
-<div class="card" style="width:100%"> <img src="vim.png" class="card-img-top" alt="Vim"> <div class="card-body"> <h4 class="card-title">Vim</h4>
-<p class="card-text">
-
-
-</p> <a href="#" class="btn btn-primary">More...</a> </div> </div>
-
+<nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading1">First</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading2">Second</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+        <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+  <h4 id="scrollspyHeading1">First heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading2">Second heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading3">Third heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading4">Fourth heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading5">Fifth heading</h4>
+  <p>...</p>
+</div>
 
 </body>
 </html>
